--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body bgcolor="#000000">
     <h1>YOU'VE BEEN OIIAED</h1>
-    <a class="button" href="https://fr.wikipedia.org/wiki/Adolf_Hitler"
+    <div><a class="button" href="https://fr.wikipedia.org/wiki/Adolf_Hitler"
 		onmouseover="Imga.src='oiia_moving.gif'"
 		onmouseout="Imga.src='oiia.png'">
 		<img class="button" src="oiia.png" name="Imga">
 	</a>
+    </div>
 </body>
 </html>
